--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,7 +2,7 @@
   <div class="container about-container">
     <p class="about-lable">tradition and love</p>
     <h2 class="about-title">how it’s made?</h2>
-     <picture class="about-picture">
+    <picture class="about-picture">
       <source
         srcset="
           ./images/about_cow_desk.webp    1x,
@@ -72,9 +72,13 @@
         </p>
       </li>
       <li class="about-list-item">
-        <button class="about-btn" type="button">Read more</button>
+        <button class="about-btn" type="button">
+          Read more
+          <svg class="about-btn-arrow">
+            <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
+          </svg>
+        </button>
       </li>
     </ul>
-   
   </div>
 </section>
