--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,5 +1,7 @@
 
-
+.container {
+    padding: 0;
+}
 .about {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -57,8 +59,10 @@
     background: #F8D24E;
     border-radius: 10px;
     border: 0px;
-    display: inline;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 7.75;
     width: 164px;
     height: 42px;
 
@@ -71,16 +75,27 @@
     margin-top: 24px;
 }
 
-.about-btn::after {
-    content: ">";
+.about-btn-arrow {
+width: 12px;
+height: 12pt;
 }
+
 
 .about-picture {
     margin-top: 32px;
     margin-bottom: 40px;
-
+    background-color: rgba(248, 210, 78, 0.7);
+    background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+        box-shadow: 0px 8px 30px rgba(153, 114, 23, 0.25);
+        border-radius: 250px;
+        background-position:  39px;
    }
 
+   .about-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   }
 @media screen and (min-width: 768px) {
 .about-lable {
     font-weight: 800;
