--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,5 @@
 <header>
-    <!--Головна навігація-->
     <div class="conteiner header-main-nav">
-        <div class="conteiner-nav">
             <a href="header.html" class="header-logo link"> 
                 <svg class="header-logo-icon">
                     <use href=""></use>
@@ -9,13 +7,13 @@
             </a>
             <nav>
                 <ul class="header-site-nav list">
-                    <li class="header-item"><a href="" class="header-nav-link current link">Home</a></li>
-                    <li class="header-item"><a href="" class="header-nav-link link">How it’s made?</a></li>
-                    <li class="header-item"><a href="" class="header-nav-link link">Our products</a></li>
-                    <li class="header-item"><a href="" class="header-nav-link link">Contact</a></li>
+                    <li class="header-item"><a href="#" class="header-nav-link link">Home</a></li>
+                    <li class="header-item"><a href="#" class="header-nav-link current link">How it’s made?</a></li>
+                    <li class="header-item"><a href="#" class="header-nav-link link">Our products</a></li>
+                    <li class="header-item"><a href="#" class="header-nav-link link">Contact</a></li>
                 </ul>
             </nav>
-            <button type="button" class="header-button" data-modal-open>Buy now
+            <button type="button" class="header-button">Buy now
                 <svg class="header-button-icon" width="12" height="12">
                     <use href=""></use>
                 </svg>
@@ -26,7 +24,6 @@
                     <use href=""></use>
                 </svg>
             </button>
-        </div>
     </div>
     <div class="header-mobile-menu js-menu-container">
         <div class="container header-mobile-menu-container">
@@ -41,10 +38,10 @@
                 </svg>
             </a>
             <ul class="header-site-nav-mobile list">
-                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile current link">Home</a></li>
-                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile link">How it’s made?</a></li>
-                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile link">Our products</a></li>
-                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile link">Contact</a></li>
+                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile link">Home</a></li>
+                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile current link">How it’s made?</a></li>
+                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile link">Our products</a></li>
+                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile link">Contact</a></li>
             </ul>
             <button type="button" class="header-button-mobile">Buy now
                 <svg class="header-button-mobile-icon" width="12" height="12">
