--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,16 +1,24 @@
 /* Мобільне меню */
 @media screen and (max-width: 767px) {
-        .header-logo {
-                width: 48px;
+        .header-main-nav {
+                position: relative;
                 height: 44px;
+                padding-top: 14px;
+                padding-left: 20px;
+                padding-right: 20px;
         }
 
         .header-logo-icon {
                 width: 48px;
                 height: 44px;
+        }
+
+        .header-logo {
+                width: 48px;
+                height: 44px;
                 position: absolute;
-                top: 0;
-                left: 0;
+                top: 14px;
+                left: 20px;
                 background-color: transparent;
                 border: none;
                 padding: 0;
@@ -21,27 +29,14 @@
                 display: none;
         }
 
-        .header-main-nav {
-                position: relative;
-                margin-top: 8px;
-                height: 72px;
-                padding: 14px 20px;
-        }
-
-        .header-conteiner-nav {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-        }
-
         .header-button {
                 display: none;
         }
 
         .header-mobile-menu-open {
                 position: absolute;
-                top: 0;
-                right: 0;
+                top: 14px;
+                right: 20px;
                 fill: #FFFFFF;
                 background-color: transparent;
                 border: none;
@@ -54,12 +49,10 @@
                 width: 100%;
                 height: 100%;
                 z-index: 1000;
-                max-height: 600px;
                 top: 0;
                 left: 0;
                 background-color: #84A178;
                 opacity: 0;
-                /* box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); */
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 visibility: hidden;
                 pointer-events: none;
@@ -77,8 +70,9 @@
                 flex-direction: column;
                 align-items: center;
                 height: 100%;
+                width: 100%;
                 position: relative;
-                padding: 20px;
+                padding: 0;
         }
 
         .header-logo-mobile {
@@ -91,6 +85,11 @@
                 border: none;
                 padding: 0;
                 line-height: 0;
+        }
+
+        .header-logo-mobile-icon {
+                width: 48px;
+                height: 44px;
         }
 
         .header-mobile-menu-close-btn {
@@ -112,20 +111,21 @@
                 margin-bottom: 114px;
         }
 
+        .header-item-mobile {
+                margin-bottom: 32px;
+        }
+
+        .header-item-mobilelast-child {
+                margin-bottom: 0px;
+        }
+
         .header-nav-link-mobile {
                 display: block;
-                position: relative;
-                margin-bottom: 32px;
                 font-weight: 700;
                 font-size: 32px;
                 line-height: 1.2;
-                letter-spacing: 0.02em;
                 color: #FCFCFC;
                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .header-nav-link-mobile:last-child {
-                margin-bottom: 0px;
         }
 
         .header-nav-link-mobile.current {
@@ -172,49 +172,214 @@
 }
 
 /*Планшетне меню*/
-@media screen and (min-width: 768px) {}
-
-/* Комп'ютерне меню */
-@media screen and (min-width: 1200px) {
-        .header-mobile-menu-open {
-                display: none;
-        }
-
-        .header-mobile-menu {
-                display: none;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+        .header-main-nav {
+                position: relative;
+                height: 46px;
+                padding-top: 20px;
+                padding-left: 32px;
+                padding-right: 32px;
+                background-color: #84A178;
         }
 
         .header-logo {
-                width: 60px;
-                height: 65px;
-        }
-
-        .header-logo-icon {
-                width: 60px;
-                height: 65px;
                 position: absolute;
-                top: 0;
-                left: 0;
+                top: 20px;
+                left: 32px;
+                width: 48px;
+                height: 44px;
                 background-color: transparent;
                 border: none;
                 padding: 0;
                 line-height: 0;
         }
 
+        .header-logo-icon {
+                width: 48px;
+                height: 44px;
+        }
+
+        .header-site-nav {
+                display: none;
+        }
+
+        .header-mobile-menu-open {
+                position: absolute;
+                top: 29px;
+                right: 216px;
+                fill: #FFFFFF;
+                background-color: transparent;
+                border: none;
+                padding: 0;
+                line-height: 0;
+        }
+
+        .header-button {
+                position: absolute;
+                top: 20px;
+                right: 32px;
+                display: flex;
+                width: 152px;
+                height: 42px;
+                margin-top: 4px;
+                padding-top: 12px;
+                padding-bottom: 12px;
+                padding-left: 36px;
+                border-radius: 4px;
+                border: transparent;
+                color: #000000;
+                background-color: #F8D24E;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                cursor: pointer;
+                text-align: center;
+                font-family: var(--primary-font);
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 1.2;
+                transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        }
+
+        .header-button:hover {
+                background-color: #0A8817;
+        }
+
+        .header-button:focus {
+                background-color: #0A8817;
+                color: #FFFFFF;
+        }
+
+        .header-button:disabled {
+                background-color: #ABABAB;
+        }
+
+        .header-button-icon {
+                margin-left: 4px;
+        }
+
+        .header-mobile-menu {
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                z-index: 1000;
+                top: 0;
+                left: 0;
+                background-color: #84A178;
+                opacity: 0;
+                /* box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); */
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                visibility: hidden;
+                pointer-events: none;
+                transition: opacity 250ms linear, visibility 250ms linear;
+        }
+
+        .header-mobile-menu.is-open {
+                opacity: 1;
+                visibility: visible;
+                pointer-events: auto;
+        }
+
+        .header-mobile-menu-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 0;
+                height: 100%;
+                width: 100%;
+                position: relative;
+        }
+
+        .header-logo-mobile {
+                position: absolute;
+                width: 48px;
+                height: 44px;
+                top: 20px;
+                left: 32px;
+                background-color: transparent;
+                border: none;
+                padding: 0;
+                line-height: 0;
+        }
+
+        .header-logo-mobile-icon {
+                width: 48px;
+                height: 44px;
+        }
+
+        .header-mobile-menu-close-btn {
+                position: absolute;
+                top: 32px;
+                right: 32px;
+                background-color: transparent;
+                border: none;
+                padding: 0;
+                line-height: 0;
+        }
+
+        .header-site-nav-mobile {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                margin-top: 140px;
+        }
+
+        .header-item-mobile {
+                margin-bottom: 40px;
+        }
+
+        .header-item-mobile:last-child {
+                margin-bottom: 0px;
+        }
+
+        .header-nav-link-mobile {
+                display: block;
+                font-weight: 700;
+                font-size: 48px;
+                line-height: 1.2;
+                color: #FCFCFC;
+                transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .header-nav-link-mobile.current {
+                color: #131313;
+        }
+        .header-button-mobile {
+                display: none;
+        }
+}
+/* Комп'ютерне меню */
+@media screen and (min-width: 1200px) {
+        .header-mobile-menu-open {
+                display: none;
+        }
+        .header-mobile-menu {
+                display: none;
+        }
         .header-main-nav {
                 position: relative;
+                height: 65px;
+                padding-top: 8px;
+                padding-left: 16px;
+                padding-right: 16px;
                 background-color: #84A178;
                 display: flex;
                 align-items: center;
-                height: 81px;
         }
-
-        .header-conteiner-nav {
-                display: flex;
-                align-items: center;
-                justify-content: center;
+        .header-logo-icon {
+                width: 60px;
+                height: 65px;
         }
-
+        .header-logo {
+                width: 60px;
+                height: 65px;
+                position: absolute;
+                top: 8px;
+                left: 16px;
+                background-color: transparent;
+                border: none;
+                padding: 0;
+                line-height: 0;
+        }
         .header-site-nav {
                 display: flex;
                 align-items: center;
@@ -223,15 +388,12 @@
                 margin-right: 204px;
                 margin-bottom: 13px;
         }
-
         .header-item {
                 margin-right: 28px;
         }
-
         .header-item:last-child {
                 margin-right: 0;
         }
-
         .header-nav-link {
                 color: #FCFCFC;
                 font-family: var(--primary-font);
@@ -240,11 +402,9 @@
                 line-height: 1.25;
                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-
         .header-nav-link.current {
                 color: #F8D24E;
         }
-
         .header-button {
                 display: flex;
                 width: 152px;
@@ -267,20 +427,16 @@
                 line-height: 1.2;
                 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-
         .header-button:hover {
                 background-color: #0A8817;
         }
-
         .header-button:focus {
                 background-color: #0A8817;
                 color: #FFFFFF;
         }
-
         .header-button:disabled {
                 background-color: #ABABAB;
         }
-
         .header-button-icon {
                 margin-left: 4px;
         }
