--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -34,6 +34,7 @@ img {
     width: 480px;
     margin: 0 auto;
     padding: 0 20px;
+    background-color: #84A178;
 
 @media screen and (max-width: 479px) {
     width: 100%;
