--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -115,7 +115,7 @@
                 margin-bottom: 32px;
         }
 
-        .header-item-mobilelast-child {
+        .header-item-mobile:last-child {
                 margin-bottom: 0px;
         }
 
@@ -128,7 +128,8 @@
                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
-        .header-nav-link-mobile.current {
+        .header-nav-link-mobile:hover,
+        .header-nav-link-mobile:focus {
                 color: #131313;
         }
 
@@ -266,7 +267,6 @@
                 left: 0;
                 background-color: #84A178;
                 opacity: 0;
-                /* box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); */
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 visibility: hidden;
                 pointer-events: none;
@@ -340,7 +340,8 @@
                 color: #FCFCFC;
                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-        .header-nav-link-mobile.current {
+        .header-nav-link-mobile:hover,
+        .header-nav-link-mobile:focus {
                 color: #131313;
         }
         .header-button-mobile {
@@ -402,7 +403,9 @@
                 line-height: 1.25;
                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-        .header-nav-link.current {
+        .header-nav-link:hover,
+        .header-nav-link:focus
+         {
                 color: #F8D24E;
         }
         .header-button {
