--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,3 +1,10 @@
+h1,
+h2,
+h3,
+h4 p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .products {
     text-align: center;
     color: #131313;
@@ -33,12 +40,10 @@
     font-size: 14px;
     line-height: 1.8;
     text-align: center;
+    margin-top: 0px;
 }
 .products-item {
     border-radius: 24px;
-    padding-bottom: 16px;
-    padding-top: 126px;
-
 }
 .products-item-cream {
     background-color: #AEC6A5;
@@ -50,50 +55,99 @@
 .products-item-milkshakes {
     background-color: #D6936D;
 }
-.products-list {
+.products-list-box {
     position: relative;
 }
-.products-item-cream::before {
+
+.products-item::before{
     content: " ";
     position: absolute;
     width: 200px;
     height: 200px;
+    background-size: 200px 200px;
+    border-radius: 100%;
+    top: calc(0% + 11px);
+    transform: translate(-50%, -50%);
+
+}
+.products-item-cream::before{
+    
+    background-color: rgba(156, 190, 143, 0.7);
+    box-shadow: 0px 5px 20px rgba(10, 136, 23, 0.25);
+    
+   
+}
+.products-item-coffee::before{
+    
+    background-color: rgba(248, 210, 78, 0.7);
+    box-shadow: 0px 5px 20px 0px rgba(153, 114, 23, 0.25);
+   
+
+}
+.products-item-milkshakes::before{
+    
+    background-color: rgba(213, 117, 63, 0.7);
+    box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.25);
+
+}
+.products-item::after {
+    content: " ";
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-size: 200px 200px;
+    border-radius: 100%;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.products-item-cream::after {
     background-image: url(/src/images/products/circl-icecream-1x.png);
-    box-shadow: 0px 5px 20px 0px rgba(10, 136, 23, 0.25);
-    background-size: 200px 200px;
-    border-radius: 100%;
+    
+    
 }
-.products-item-coffee::before {
-    content: " ";
-    position: absolute;
-    width: 200px;
-    height: 200px;
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    .products-item-cream::after {
+        background-image: url(../images/products/circl-icecream-2x.png);
+    }
+}
+.products-item-coffee::after {
     background-image: url(/src/images/products/circl-coffee-1x.png);
-    box-shadow: 0px 5px 20px rgba(10, 136, 23, 0.25);
-    background-size: 200px 200px;
-    border-radius: 100%;
+    
 }
-.products-item-milkshakes::before {
-    content: " ";
-    position: absolute;
-    width: 200px;
-    height: 200px;
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    .products-item-coffee::after {
+        background-image: url(/src/images/products/circl-coffee-2x.png);
+    }
+}
+.products-item-milkshakes::after {
     background-image: url(/src/images/products/circl-milkshake-1x.png);
-    box-shadow: 0px 5px 20px rgba(10, 136, 23, 0.25);
-    background-size: 200px 200px;
-    border-radius: 100%;
+    
 }
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    .products-item-milkshakes::after {
+        background-image: url(/src/images/products/circl-milkshake-2x.png);
+    }
+}
+
 @media screen and (max-width: 767px) {
     .products-list {
             padding-left: 81px;
             padding-right: 81px;
             padding-bottom: 60px;
         }
-        .products-item:not(:last-child) {
+        .products-list-box:not(:last-child) {
             margin-bottom: 168px;
         }
         .products {
             background-image: url(/src/images/background/mob-bg-@1x-885.jpg);
+            
         }
         .products-title {
             margin-bottom: 145px;
@@ -102,17 +156,174 @@
             margin-bottom: 40px;
         }
         .products-text {
-            padding-bottom: 138px;
+            margin-bottom: 106px;
             padding-left: 60px;
             padding-right: 60px;
         }
+        .products-item {
+            padding-bottom: 16px;
+            padding-top: 126px;
         
+        }
 
 }
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
 screen and (min-resolution: 192dpi) and (max-width: 767px),
 screen and (min-resolution: 2dppx) and (max-width: 767px) {
-    .hero {
-        background-image: url(../images/background/mob-bg-@2x-1162.jpg);
+    .products {
+        background-image: url(../images/background/mob-bg-@2x-1770.jpg);
     }
+}
+@media screen and (max-width: 380px) {
+    .products-list {
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+       
+
+        
+}
+
+/*=======================================TABLET=====================================================*/
+
+
+
+@media screen and (min-width: 768px) {
+.products-list {
+    display: flex;
+    gap: 16px;
+}
+.products-title {
+    margin-bottom: 200px;
+}
+.products-item {
+    padding-top: 108px;
+    padding-bottom: 12px;
+    padding-left: 26px;
+    padding-right: 26px;
+}
+
+.products-item-title {
+    margin-bottom: 40px;
+    font-size: 22px;
+    font-weight: 700;
+}
+.products-item::after {
+top: -5%;
+}
+.products-item::before {
+    top: calc(0% - 5px);
+}
+.products-list-box {
+    display: flex;
+}
+.products {
+    background-image: url(/src/images/background/tab-bg-@1x-963.jpg);
+}
+.products-list {
+    padding-bottom: 60px;
+}
+.products-text-cream {
+    margin-bottom: 81px;
+}
+.products-text-coffe {
+    margin-bottom: 50px;
+}
+.products-text-milkshakes {
+    margin-bottom: 75px;
+}
+
+
+
+
+
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 767px),
+screen and (min-resolution: 192dpi) and (min-width: 767px),
+screen and (min-resolution: 2dppx) and (min-width: 767px) {
+    .products {
+        background-image: url(../images/background/tab-bg-@2x-1926.jpg);
+    }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 767px),
+screen and (min-resolution: 192dpi) and (min-width: 767px),
+screen and (min-resolution: 2dppx) and (min-width: 767px) {
+    .products-item-coffee::after {
+        background-image: url(/src/images/products/circl-coffee-2x.png);
+    }
+    
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 767px),
+screen and (min-resolution: 192dpi) and (min-width: 767px),
+screen and (min-resolution: 2dppx) and (min-width: 767px) {
+    .products-item-milkshakes::after {
+        background-image: url(/src/images/products/circl-milkshake-2x.png);
+    }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 767px),
+screen and (min-resolution: 192dpi) and (min-width: 767px),
+screen and (min-resolution: 2dppx) and (min-width: 767px) {
+    .products-item-cream::after {
+        background-image: url(../images/products/circl-icecream-2x.png);
+    }
+}
+/*====================================DESKTOP==========================================*/
+
+@media screen and (min-width: 1200px) {
+.products-natural {
+    font-size: 30px;
+}
+.products-title {
+    font-size: 36px;
+    margin-bottom: 303px;
+}
+.products {
+    background-image: url(/src/images/background/desk-bg-@1x-1300.jpg);
+}
+.products-item::before {
+    content: " ";
+    position: absolute;
+    width: 303px;
+    height: 303px;
+    background-size: 303px 303px;
+    border-radius: 100%;
+    top: 0%;
+    transform: translate(-50%, -50%);
+
+}
+.products-item-cream::before {
+    box-shadow: 0px 8px 30px 0px rgba(10, 136, 23, 0.25);
+}
+
+.products-item-coffee::before {
+    box-shadow: 0px 8px 30px 0px rgba(153, 114, 23, 0.25);
+}
+
+.products-item-milkshakes::before {
+    box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+}
+.products-item::after {
+    content: " ";
+    position: absolute;
+    width: 303px;
+    height: 303px;
+    background-size: 303px 303px;
+    border-radius: 100%;
+   
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: calc(0% - 16px);
+}
+.products-item {
+    padding-left: 64px;
+    padding-right: 64px;
+    padding-bottom: 60px;
+    padding-top: 165px;
+}
+.products-item-cream {
+    padding-left: 61px;
+        padding-right: 63px;
+}
 }
