--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -17,8 +17,8 @@
 
         .container-customer-rewiews{
         background-image: url("../images/background/mob-bg-@1x-581.jpg");
-        min-Width: 320px;
-        min-Height: 1037px;
+        width: 480px;
+        min-Height: 100%;
         margin-left: auto;
         margin-right: auto;
         background-size: cover;
@@ -45,8 +45,8 @@
         margin-top: 32px;
         margin-bottom: 0px;
         padding: 35px 39px;
-        width: 202px;
-        height: 186px;
+        width: 280px;
+        height: 256px;
 
         background-color: #84A178;
         margin-left: auto;
@@ -91,8 +91,8 @@
     
             .review-text {
                 padding: 28px 80px;
-                width: 545px;
-                height: 81px;
+                width: 705px;
+                height: 138px;
                 font-size: 14px;
                 font-weight: 500;
                 line-height: 1.86;
@@ -112,8 +112,8 @@
 
         .review-text {
             padding: 43px 109px;
-            width: 750px;
-            height: 52px;
+            width: 968px;
+            height: 138px;
         }
 
         .review {
@@ -128,6 +128,8 @@
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 480px) {
     .container-customer-rewiews {
         background-image: url("../images/background/mob-bg-@1x-885.jpg");
+        Width: 480px;
+
     }
 }
 
@@ -144,6 +146,7 @@ screen and (min-resolution: 192dpi) and (min-width: 768px),
 screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .container-customer-rewiews{
         background-image: url("../images/background/tab-bg-@2x-1926.jpg");
+        Width: 768px;
     }
 }
 
@@ -152,5 +155,6 @@ screen and (min-resolution: 192dpi) and (min-width: 1200px),
 screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     .container-customer-rewiews {
         background-image: url("../images/background/desk-bg-@2x-2600.jpg");
+        Width: 1200px;
     }
 }
