--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,7 @@
       </svg>
     </button>
   </div>
-  <div class="header-mobile-menu js-menu-container">
+  <div class="header-mobile-menu js-menu-container>
     <div class="container header-mobile-menu-container">
       <button class="header-mobile-menu-close-btn js-close-menu">
         <svg class="header-mobile-menu-close-icon" width="32" height="32">
@@ -51,13 +51,13 @@
           <a href="#home" class="header-nav-link-mobile link">Home</a>
         </li>
         <li class="header-item-mobile">
-          <a href="#" class="header-nav-link-mobile link">How it’s made?</a>
+          <a href="#about" class="header-nav-link-mobile link">How it’s made?</a>
         </li>
         <li class="header-item-mobile">
-          <a href="#" class="header-nav-link-mobile link">Our products</a>
+          <a href="#products" class="header-nav-link-mobile link">Our products</a>
         </li>
         <li class="header-item-mobile">
-          <a href="#" class="header-nav-link-mobile link">Contact</a>
+          <a href="#contacts" class="header-nav-link-mobile link">Contact</a>
         </li>
       </ul>
       <button type="button" class="header-button-mobile">
